log
Wed 08 May 2024 11:41:43 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
6837f28
Wed 08 May 2024 11:49:57 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  5|7
total_score: 5/70
95898a9
Wed 08 May 2024 11:51:17 PM UTC: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
d015032
Wed 08 May 2024 11:55:24 PM UTC: 
 treemap.c | 33 ++++++++++++++++++++++++++++++++-
 1 file changed, 32 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
68aa663
Wed 08 May 2024 11:57:07 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
7e7e466
Thu 09 May 2024 12:07:24 AM UTC: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
3b4f387
Thu 09 May 2024 12:08:06 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:105:18: error: variable ‘child’ set but not used [-Werror=unused-but-set-variable]
  105 |         TreeNode child;
      |                  ^~~~~
cc1: all warnings being treated as errors
Compilation failed
ba2030f
Thu 09 May 2024 12:08:38 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  17|4
total_score: 35/70
b4768d5
Thu 09 May 2024 12:10:01 AM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  18|3
total_score: 40/70
123a997
Thu 09 May 2024 12:16:00 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
48601ce
Fri 10 May 2024 09:38:21 PM UTC: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  22|2
total_score: 50/70
8dcf2f4
Fri 10 May 2024 09:38:58 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
12d401b
Fri 10 May 2024 09:39:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  23|2
total_score: 50/70
6448f88
Fri 10 May 2024 09:39:23 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a5adf15
Fri 10 May 2024 09:41:21 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  25|1
total_score: 60/70
c0d5db8
Fri 10 May 2024 09:41:27 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  25|1
total_score: 60/70
6216572
Fri 10 May 2024 09:50:51 PM UTC: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
696c6c1
Fri 10 May 2024 09:51:51 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
9425956
Fri 10 May 2024 09:54:12 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
5377760
Fri 10 May 2024 09:54:41 PM UTC: 
 treemap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  0|0
54ce4bd
Fri 10 May 2024 09:55:02 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  29|0
total_score: 70/70
856152b
Fri 10 May 2024 09:55:27 PM UTC: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  29|0
total_score: 70/70
f6c442a
